--- a/src/main/resources/webroot/static/css/common.css
+++ b/src/main/resources/webroot/static/css/common.css
@@ -23,11 +23,14 @@
     color: #029789 !important
 }
 .bg-wine-red {
-    background-color: #701500;
+    background-color: #701500 !important
 }
 
 .bg-coffee {
-    background-color: #6d3704;
+    background-color: #6d3704 !important
+}
+.bg-purse{
+    background-color:  #50314F !important
 }
 
 .radius1 {
